correct the alignment for social features

--- a/index.css
+++ b/index.css
@@ -684,6 +684,7 @@ html,body{
   .contact_link img{
     width: 32px;
     height: 32px;
+    margin: 0 19px;
   }
 }
 
